--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -32,6 +32,7 @@
 }
 .el-menu-item:hover {
   color: #fff;
+  background-color: #409eff !important;
   .dotted {
     width: 10px;
     height: 10px;
